<resources>
    <string name="app_name">DailyTasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_Task">Add Task</string>
    <string name="save_task">Save Task</string>
    <string name="confirm_task">Confirm task</string>
    <string name="Choose_preset">Or choose a preset:</string>
    <string name="task_days">Task days</string>
    <string name="timesDay">time/day</string>
    <string name="Enter_task_tittle">Enter task tittle...</string>
    <string name="walk_the_dog">Walk the dog</string>
    <string name="Create_own">Create your own:</string>
    <string name="title">Title:</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="apply_and_Back">Apply and Back</string>
    <string name="delete_task">Delete Task</string>
    <string name="text_Details">Task start each day as incomplete. Mark a task as done to increase yor steak.</string>
</resources>