<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="#833D37"
    tools:context=".CreateActionFragment">

    <TextView
        android:id="@+id/tvAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Add_Task"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constActionType"
        app:layout_constraintEnd_toEndOf="@+id/constActionType"
        app:layout_constraintStart_toStartOf="@+id/constActionType"
        app:layout_constraintTop_toTopOf="@+id/constActionType" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constActionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddTask">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/radiobutton_background_selector"
                android:drawableLeft="@drawable/radiobutton_selector_check"
                android:padding="12dp"
                android:checked="true"
                android:button="@null"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:button="@null"
                android:padding="12dp"
                android:background="@drawable/radiobutton_background_selector"
                android:drawableLeft="@drawable/radiobutton_selector_heart"
                />

            <RadioButton
                android:id="@+id/radioBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:button="@null"
                android:padding="12dp"
                android:background="@drawable/radiobutton_background_selector"
                android:drawableLeft="@drawable/radiobutton_selector_food"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radioBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/radiobutton_background_selector"
                android:drawableLeft="@drawable/radiobutton_selector_time"
                android:button="@null"
                android:padding="12dp"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radioBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/radiobutton_background_selector"
                android:drawableLeft="@drawable/radiobutton_selector_block"
                android:button="@null"
                android:padding="12dp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:padding="16dp"
            android:text="@string/text_Details"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/tvCreateOwn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.6"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:text="@string/Create_own"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/textDetails"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etCreateOwn"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:hint="@string/Enter_task_tittle"
        android:imeOptions="actionGo"
        android:textColorHint="#99FFFFFF"
        android:singleLine="true"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constActionType"/>


    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/ic_close_thick_white"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddTask" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constChoose"
        app:layout_constraintEnd_toEndOf="@+id/constChoose"
        app:layout_constraintStart_toStartOf="@+id/constChoose"
        app:layout_constraintTop_toTopOf="@+id/constChoose" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constChoose"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCreateOwn">

       <TextView
           android:id="@+id/tvChoosePreset"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@android:color/white"
           android:textAllCaps="true"
           android:textSize="16dp"
           app:layout_constraintTop_toTopOf="parent"
           android:alpha="0.6"
           android:text="@string/Choose_preset"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/constChoose"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>